[gd_scene load_steps=4 format=3 uid="uid://bbtpovavuuglo"]

[ext_resource type="Script" path="res://src/gui/final_screen.gd" id="1_3myc1"]
[ext_resource type="Theme" uid="uid://4gucrwdin4g" path="res://assets/fonts/pixel_font_theme.tres" id="1_y10vm"]
[ext_resource type="Script" path="res://src/studio.gd" id="2_h8o1u"]

[node name="FinalScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3myc1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.905882, 0.882353, 0.8, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(250, 300)
render_target_update_mode = 4

[node name="Studio" type="Node2D" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("2_h8o1u")

[node name="Background" type="Sprite2D" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2/SubViewportContainer/SubViewport/Studio"]
unique_name_in_owner = true
centered = false

[node name="Canvas" type="Sprite2D" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2/SubViewportContainer/SubViewport/Studio"]
unique_name_in_owner = true
centered = false

[node name="PromptLabel" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_y10vm")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_y10vm")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Congratulations!!"
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_y10vm")
theme_override_font_sizes/font_size = 26
text = "Save PNG"

[node name="RestartButton" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_y10vm")
theme_override_font_sizes/font_size = 26
text = "Draw Another!"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_y10vm")
theme_override_font_sizes/font_size = 26
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
